# gui-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  common-client.code-workspace  gui-client.code-workspace  release_build.ps1  release_build.sh  win_installer_setup.iss
lib/: liblzma.lib
src/: CMakeLists.txt  main.cpp
src/assets/images/: icon.icns
src/cpp/: api.cpp  clipboard_data.cpp  clipboard_manager.cpp  device_info.cpp  general_panel.cpp  info_panel.cpp  key_config_panel.cpp  main.cpp  main_window.cpp  message_box.cpp  room_config_panel.cpp  server_panel.cpp  settings.cpp  task_tray.cpp  tmp_dir.cpp
src/darwin/: CMakeLists.txt
src/darwin/cpp/: osx_clipboard_manager.cpp  osx_device_info.cpp
src/darwin/include/: osx_clipboard_manager.h  osx_device_info.h
src/include/: api.h  clipboard_data.h  clipboard_manager.h  config.h  device_info.h  general_panel.h  info_panel.h  key_config_panel.h  main_window.h  message_box.h  room.h  room_config_panel.h  server_panel.h  settings.h  task_tray.h  tmp_dir.h
src/lib/: CMakeLists.txt
src/lib/cpp/: main_window.cpp
src/lib/include/: main_window.h
src/windows/: CMakeLists.txt
src/windows/cpp/: win_clipboard_manager.cpp  win_device_info.cpp
src/windows/include/: win_clipboard_manager.h  win_device_info.h
